--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@types/react-dom": "^16.9.2",
     "awesome-typescript-loader": "^5.2.1",
+    "cypress": "4.5.0",
+    "cypress-react-unit-test": "4.2.1",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.8.2"
