--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Boilerplate for MobX + React project with Typescript, ES6 compilation and hot code reloading",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,8 @@
   "devDependencies": {
     "@types/react-dom": "^16.9.2",
     "awesome-typescript-loader": "^5.2.1",
-    "cypress": "4.5.0",
-    "cypress-react-unit-test": "4.2.1",
+    "cypress": "4.9.0",
+    "cypress-react-unit-test": "4.8.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.8.2"
