--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run"
   },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/mobxjs/mobx-react-typescript-boilerplate.git"
